# copilot-chan-be

./: .env.example  .gitignore  README.md  config.yaml.example  main.py  pyproject.toml
agents/chat_agent/: agent.py
agents/voice_agent/: agent.py
app/: auth.py  config.py  deps.py  main.py  mem0_client.py
app/middleware/: __init__.py
app/routers/: memory.py
app/utils/: user_id_extractor.py
chat_agent/: agent.py  config.json  load_mcp_toolset.py
core/memory/: client.py
core/utils/: build_text_context.py  generate_title.py
tests/: test_webhook_auth.py
