[project]
name = "copilot-chan"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ag-ui-adk>=0.3.5",
    "asyncpg>=0.30.0",
    "bs4>=0.0.2",
    "cachetools>=6.2.1",
    "fastapi==0.118.3",
    "firebase-admin>=6.9.0",
    "google-adk>=1.19.0",
    "lxml>=6.0.2",
    "mem0ai>=1.0.0",
]

[dependency-groups]
dev = [
    "pyngrok>=7.5.0",
    "ruff>=0.14.5",
]
